--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
@@ -11,7 +11,7 @@ Salut à tous !
 
 vacances
 
-promo conf React-Native-Connection -20%
+[React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er Juin) nous offre -20% (code "REACTHEBDO").
 
 React Summit !
 
@@ -53,7 +53,9 @@ Prêt à être utilisé avec **TypeScript**, **NextJS**, Chakra UI, TanStack Que
 
 ---
 
-[Next.js 13.4](https://nextjs.org/blog/next-13-4)
+[![Next.js 13.4](/emails/issues/145/nextjs.jpg)](https://nextjs.org/blog/next-13-4)
+
+**[Next.js 13.4](https://nextjs.org/blog/next-13-4)**
 
 https://twitter.com/vercel/status/1654156302531063812
 https://twitter.com/shuding_/status/1654174958715535377
@@ -78,48 +80,48 @@ https://twitter.com/jaredpalmer/status/1653804331467165696
 
 ---
 
-https://github.com/vercel/next.js/pull/49187
-
----
-
 useOptimistic ?
 https://www.linkedin.com/posts/melvyn-malherbe_la-docs-134-de-nextjs-utilise-deux-nouveau-activity-7059942543060279296-LlSj/?utm_source=pocket_saves
 
----
+https://github.com/facebook/react/pull/26740
 
-- [server-only](https://www.npmjs.com/package/server-only) + https://nextjs.org/docs/getting-started/react-essentials#keeping-server-only-code-out-of-client-components-poisoning
-- [Million.js 2.3.1 - Astro support (beta)](https://twitter.com/aidenybai/status/1655088722222923776)
-- [5 Lessons Learned From Taking Next.js App Router to Production](https://www.inngest.com/blog/5-lessons-learned-from-taking-next-js-app-router-to-production) + https://twitter.com/inngest/status/1655572340443430919
-- [The Safest Way To Hide Your API Keys When Using React](https://www.smashingmagazine.com/2023/05/safest-way-hide-api-keys-react/)
-- [Pull to refresh from scratch as a React hook](https://www.strictmode.io/articles/react-pull-to-refresh)
-- [Context, Composition, and Flexibility](https://kyleshevlin.com/context-composition-and-flexibility)
-- [React Server Components, Next.js App Router and examples](https://addyosmani.com/blog/react-server-components-app-router/) + https://twitter.com/addyosmani/status/1655270096003280896
-
-- [Redwood v5](https://community.redwoodjs.com/t/redwood-v5-0-0-is-now-available/4830): support de React 18, TypeScript v5 et observabilité.
-- [HTMX is the Future](https://quii.dev/HTMX_is_the_Future)
-- [OpenNext 1.2.0 - geolocation in middleware](https://twitter.com/fanjiewang/status/1654192897678295040)
-- [RSCs on Rspack](https://twitter.com/_hyf0/status/1655538017669648385)
-- [Always Bet On React](https://www.youtube.com/watch?v=TnyslkPfXaM)
-- [Reactathon 2023 Day 2 Livestream](https://www.youtube.com/watch?v=HOD9UQFbdgc)
-- [Ink UI - Themable UI components for your next CLI](https://twitter.com/vadimdemedes/status/1655567427885846534)
-- https://twitter.com/mhevery/status/1651249670755168262
-- https://twitter.com/dan_abramov/status/1654490061528870914
-- https://twitter.com/addyosmani/status/1655270096003280896
-- https://twitter.com/0xca0a/status/1655289946402324482
-- https://twitter.com/t3dotgg/status/1655094590154866688
-- https://buildui.com/series/react-server-components/our-first-server-component
-- [New Next.js documentation](https://twitter.com/leeerob/status/1654181055740497939)
-- [Zact - Zod Server ACTions](https://github.com/pingdotgg/zact): https://twitter.com/t3dotgg/status/1654178753914732552
-- [The Rendering Journey of a React component](https://alexsidorenko.com/react-journey): une visualisation pas-à-pas du re-rendering React.
-- [How to Test UI Automatically — Storybook and Chromatic](https://www.youtube.com/watch?v=zhrboql8UuU)
-- [Creating an interactive spotlight border with CSS and React](https://www.julienthibeaut.xyz/blog/create-spotlight-border-with-react-css)
+https://github.com/facebook/react/pull/26772
 
 ---
 
-- [Next's Server Actions Might Not Be That Safe...](https://www.youtube.com/watch?v=fdKcbyEK66M)
-- [I'm Done With React](https://www.youtube.com/watch?v=Zt8mO_Aqzw8)
-- [What Even Are React Server Components](https://www.viget.com/articles/what-even-are-react-server-components/)
-- [Astro 2.4](https://astro.build/blog/astro-240/) + https://twitter.com/astrodotbuild/status/1654181441654214658
+- 📜 [React Server Components, Next.js App Router and examples](https://addyosmani.com/blog/react-server-components-app-router/): Addy Osmani partage ses notes et reflexions sur les Server Components. Une bonne vue d'ensemble, ainsi que de nombreux exemples d'apps open-source. Liste également les raisons de ne plus utiliser Create-React-App. + https://twitter.com/addyosmani/status/1655270096003280896
+
+---
+
+- 📜 [5 Lessons Learned From Taking Next.js App Router to Production](https://www.inngest.com/blog/5-lessons-learned-from-taking-next-js-app-router-to-production): retour d'expérience de Inngest qui a migré avec succès une app CRA vers Next.js et App Router. On y retrouve quelques détails intéressants sur le caching ou la gestion des search parameeters.+ https://twitter.com/inngest/status/1655572340443430919
+
+---
+
+https://twitter.com/lydiahallie/status/1655945218594844682
+
+---
+
+- 📖 [New Next.js documentation](https://twitter.com/leeerob/status/1654181055740497939)
+- 🧑‍🎓 [TotalTypeScript - React with TypeScript tutorial](https://www.totaltypescript.com/tutorials/react-with-typescript): tutoriel gratuit par Matt Pocock, expert TypeScript.
+- 🎨 [The Rendering Journey of a React component](https://alexsidorenko.com/react-journey): visualisation pas-à-pas du re-rendering.
+- 📜 [Context, Composition, and Flexibility](https://kyleshevlin.com/context-composition-and-flexibility)
+- 📜 [HTMX is the Future](https://quii.dev/HTMX_is_the_Future)
+- 📜 [Pull to refresh from scratch as a React hook](https://www.strictmode.io/articles/react-pull-to-refresh)
+- 📜 [Creating an interactive spotlight border with CSS and React](https://www.julienthibeaut.xyz/blog/create-spotlight-border-with-react-css)
+- 📦 [Redwood 5.0](https://community.redwoodjs.com/t/redwood-v5-0-0-is-now-available/4830): support de React 18, TypeScript v5 et observabilité.
+- 📦 [Ink UI - Themable UI components for your next CLI](https://twitter.com/vadimdemedes/status/1655567427885846534)
+- 📦 [OpenNext 1.2.0 - geolocation in middleware](https://twitter.com/fanjiewang/status/1654192897678295040)
+- 📦 [Zact - Zod Server ACTions](https://github.com/pingdotgg/zact)
+- 📦 [Astro 2.4](https://astro.build/blog/astro-240/)
+- 📦 [server-only](https://www.npmjs.com/package/server-only) + https://nextjs.org/docs/getting-started/react-essentials#keeping-server-only-code-out-of-client-components-poisoning
+- 📦 [Million.js 2.3.1 - Astro support (beta)](https://twitter.com/aidenybai/status/1655088722222923776)
+- 👀 [RSCs on Rspack](https://twitter.com/_hyf0/status/1655538017669648385)
+- 👀 [Edit audio with Remotion](https://twitter.com/JNYBGR/status/1655853159623917568)
+- 🎥 [Next's Server Actions Might Not Be That Safe...](https://www.youtube.com/watch?v=fdKcbyEK66M)
+- 🎥 [I'm Done With React](https://www.youtube.com/watch?v=Zt8mO_Aqzw8)
+- 🎥 [How to Test UI Automatically — Storybook and Chromatic](https://www.youtube.com/watch?v=zhrboql8UuU)
+- 🎥 [Always Bet On React](https://www.youtube.com/watch?v=TnyslkPfXaM)
+- 🎥 [Should You Learn React in 2023? - Interview with React Summit Speakers Tru Narla and Jordan Gensler](https://www.youtube.com/watch?v=5xRqP-M8MkM)
 - 👥 [React Summit](https://reactsummit.com/?utm_source=email&utm_medium=thisweekinreact) (Amsterdam, 2-6 Juin) nous offre -5% sur les entrées (code "ThisWeekInReact5").
 
 <SubscribeFormEmbed />
@@ -138,14 +140,12 @@ Want to get an inside look at the future of generative AI? On May 17th, [OpenAI 
 
 ## 📱 React-Native {#react-native}
 
-- [Best tips & tricks for E2E Maestro with React Native](https://dev.to/retyui/best-tips-tricks-for-e2e-maestro-with-react-native-2kaa)
-- https://twitter.com/kacperkapusciak/status/1654434612825792513
-- https://twitter.com/mrousavy/status/1654143459849121792
-- [React Native run-android: How to Test Various Device Types](https://www.testim.io/blog/react-native-run-android/)
-
----
-
-- 👥 [React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er Juin) nous offre -10% (code "REACTHEBDO").
+- 📖 [New Reanimated Beta docs](https://twitter.com/swmansion/status/1655930596093472774)
+- 📜 [Best tips & tricks for E2E Maestro with React Native](https://dev.to/retyui/best-tips-tricks-for-e2e-maestro-with-react-native-2kaa)
+- 📜 [React Native run-android: How to Test Various Device Types](https://www.testim.io/blog/react-native-run-android/)
+- 🎨 [VisionCamera + Skia + TensorFlow demo](https://twitter.com/mrousavy/status/1654143459849121792): c'est impressionnant ce qu'on peut faire en React-Native aujourd'hui. Le rendu Skia et les modèles TensorFlow peuvent être mis à jour avec une update Over-The-Air.
+- 🎨 [Reanimated 3 + Expo Router + Shared Element Transitions demo](https://twitter.com/kacperkapusciak/status/1654434612825792513)
+- 👥 [React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er Juin) nous offre -20% (code "REACTHEBDO").
 - 👥 [App.js](https://appjs.co/) (Cracovie, 10-12 Mai) nous offre [-20% sur les workshops](https://ti.to/appjs/2023/discount/ThisWeekinReact20) (code "ThisWeekinReact20").
 - 👥 [Chain React](https://chainreactconf.com/) (Portland, 18-19 Mai) nous offre -10% sur les entrées (code "thisweekinreact").
 
@@ -169,13 +169,11 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 
 ## 🇫🇷 En français {#fr}
 
-- [Tout savoir sur les Server Action avec NextJS 13.4](https://www.youtube.com/watch?v=GvnobIEfYs0)
-- [Next.js qui imite PHP ? - Actus JS de la semaine (08 mai 2023)](https://www.youtube.com/watch?v=xT5gu_FTAH4)
-- [3 manière d'Optimiser ton Application React](https://www.youtube.com/watch?v=Si5KZv1wLNA)
+- 🎥 [Tout savoir sur les Server Action avec NextJS 13.4](https://www.youtube.com/watch?v=GvnobIEfYs0)
+- 🎥 [Next.js qui imite PHP ? - Actus JS de la semaine (08 mai 2023)](https://www.youtube.com/watch?v=xT5gu_FTAH4)
+- 🎥 [3 manière d'Optimiser ton Application React](https://www.youtube.com/watch?v=Si5KZv1wLNA)
 
 💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
 
 ---
 
@@ -187,16 +185,11 @@ Nous cherchons des développeurs(euses) JavaScript passionnés. Vous interviendr
 - [Angular v16](https://blog.angular.io/angular-v16-is-here-4d7a28ec680d)
 - [Nx v16](https://blog.nrwl.io/nx-16-is-here-69584ec87053#68c6)
 - [Vitest 0.31](https://twitter.com/sheremet_va/status/1653827712576880645)
-- https://twitter.com/AndaristRake/status/1654575004825141253
 
 ---
 
 ## 🤭 Fun {#fun}
 
-https://twitter.com/markdalgleish/status/1654259858668163072
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
-
-🤣 [Les autres tweets marrant cette semaine](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![alt](/emails/issues/145/meme.jpg)](https://twitter.com/markdalgleish/status/1654259858668163072)
 
 A plus 👋
