--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
@@ -114,6 +114,7 @@ https://twitter.com/lydiahallie/status/1655945218594844682
 - 📦 [Zact - Zod Server ACTions](https://github.com/pingdotgg/zact)
 - 📦 [Astro 2.4](https://astro.build/blog/astro-240/)
 - 📦 [server-only](https://www.npmjs.com/package/server-only) + https://nextjs.org/docs/getting-started/react-essentials#keeping-server-only-code-out-of-client-components-poisoning
+- 📦 [Chadcn UI - Table and Data Table components](https://twitter.com/shadcn/status/1656019263394836480)
 - 📦 [Million.js 2.3.1 - Astro support (beta)](https://twitter.com/aidenybai/status/1655088722222923776)
 - 👀 [RSCs on Rspack](https://twitter.com/_hyf0/status/1655538017669648385)
 - 👀 [Edit audio with Remotion](https://twitter.com/JNYBGR/status/1655853159623917568)
@@ -122,7 +123,7 @@ https://twitter.com/lydiahallie/status/1655945218594844682
 - 🎥 [How to Test UI Automatically — Storybook and Chromatic](https://www.youtube.com/watch?v=zhrboql8UuU)
 - 🎥 [Always Bet On React](https://www.youtube.com/watch?v=TnyslkPfXaM)
 - 🎥 [Should You Learn React in 2023? - Interview with React Summit Speakers Tru Narla and Jordan Gensler](https://www.youtube.com/watch?v=5xRqP-M8MkM)
-- 👥 [React Summit](https://reactsummit.com/?utm_source=email&utm_medium=thisweekinreact) (Amsterdam, 2-6 Juin) nous offre -5% sur les entrées (code "ThisWeekInReact5").
+- 👥 [React Summit](https://reactsummit.com/?utm_source=email&utm_medium=thisweekinreact) (Amsterdam, 2-6 Juin) nous offre -5% sur les entrées (code "ThisWeekInReact5") et -10% sur les [workshops](https://reactsummit.com/react-workshops) (code "THISWEEKINREACT")
 
 <SubscribeFormEmbed />
 
