--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/145/index.mdx
@@ -4,7 +4,6 @@ title: "React Hebdo #145: Next.js, Server Actions, useFormStatus, useOptimistic,
 authors: [slorber]
 date: 05-09-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Salut à tous !
@@ -15,7 +14,7 @@ Il y a beaucoup de conférences en ce moment, avec en particulier Remix Conf et 
 
 La [React-Native-Connection](https://reactnativeconnection.io/) (Paris, 1er Juin) approche aussi, et vous pouvez avoir -20% de réduction avec le code "REACTHEBDO"!
 
-Je compte sauter l'édition de la prochaine semaine, on se retrouve donc le 24 Mai 👋
+Je compte sauter l'édition de la prochaine semaine. Prochaine édition le 24 Mai 👋
 
 <!-- truncate -->
 
