--- a/website/newsletter/145/index.mdx
+++ b/website/newsletter/145/index.mdx
@@ -4,18 +4,17 @@ title: "This Week In React #145: Next.js, Server Actions, useFormStatus, useOpti
 authors: [slorber]
 date: 05-09-2023
 image: /img/TWIR_POST.png
-unlisted: true
 ---
 
 Hi everyone!
 
-promo conf
+As expected a new version of Next.js is released. It's funny by the way, there are some React innovations that are better documented in the Next.js doc than in the React one, like form `action`, or the 2 new hooks `useFormStatus` and `useOptimistic`.
 
-React Summit !
+There are a lot of conferences at the moment, with in particular Remix Conf and App.js starting today: there will surely be some nice announcements.
 
-The link with an interview to spread - https://www.youtube.com/watch?v=5xRqP-M8MkM
+The [React-Native-Connection](https://reactnativeconnection.io/) (Paris, June 1st) is also a few weeks away, and you can have -20% discount with the code "REACTHEBDO"!
 
-<Todo />
+I plan to skip next week's edition. Next issue on May 24th 👋
 
 <!-- truncate -->
 
